--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           # Select a Checkmarx Project Name
           project_name: # optional, default is ${{ github.repository }}
           # Branch name
-          branch: # optional, default is ${{ github.ref }}
+          branch: master # optional, default is ${{ github.ref }}
           # GitHub API Token
           github_token: # optional, default is ${{ github.token }}
           # Additional parameters for AST scan
